// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MagicToast renders a success toast 1`] = `
<RNSFullWindowOverlay
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "height": 1334,
        "width": 750,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={false}
    accessibilityViewIsModal={true}
    aria-hidden={false}
    importantForAccessibility="auto"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "box-none",
        },
      ]
    }
    testID="magic-modal-portal"
  >
    <View
      accessibilityElementsHidden={false}
      aria-hidden={false}
      importantForAccessibility="auto"
      pointerEvents="box-none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "pointerEvents": "box-none",
          },
        ]
      }
      testID="magic-modal-stack-entry"
    >
      <View
        collapsable={false}
        entering={
          FadeIn {
            "build": [Function],
            "durationV": 250,
            "randomizeDelay": false,
            "reduceMotionV": "system",
          }
        }
        exiting={
          FadeOut {
            "build": [Function],
            "durationV": 250,
            "randomizeDelay": false,
            "reduceMotionV": "system",
          }
        }
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          }
        }
        pointerEvents="none"
        style={
          [
            {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
      >
        <View
          accessibilityElementsHidden={true}
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          aria-hidden={true}
          collapsable={false}
          focusable={true}
          importantForAccessibility="no-hide-descendants"
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
              },
            }
          }
          jestInlineStyle={
            [
              {
                "backgroundColor": "rgba(0, 0, 0, 0.5)",
                "flex": 1,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "backgroundColor": "rgba(0, 0, 0, 0.5)",
                "flex": 1,
              },
              {
                "opacity": 1,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
          testID="magic-modal-backdrop"
        />
      </View>
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
          }
        }
        jestInlineStyle={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
        pointerEvents="box-none"
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
          ]
        }
        testID="magic-modal-motion-layer"
      >
        <View
          collapsable={false}
          entering={
            FadeInUp {
              "build": [Function],
              "durationV": 250,
              "randomizeDelay": false,
              "reduceMotionV": "system",
            }
          }
          exiting={
            FadeOutUp {
              "build": [Function],
              "durationV": 250,
              "randomizeDelay": false,
              "reduceMotionV": "system",
            }
          }
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            [
              {
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "justifyContent": "flex-start",
              },
            ]
          }
          pointerEvents="box-none"
          style={
            [
              {
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "justifyContent": "flex-start",
              },
            ]
          }
          testID="magic-modal-animation-layer"
        >
          <View
            accessibilityViewIsModal={true}
            aria-modal={true}
            collapsable={false}
            importantForAccessibility="auto"
            onAccessibilityEscape={[Function]}
            role="dialog"
            style={
              [
                {
                  "flex": 1,
                  "justifyContent": "center",
                },
                {
                  "justifyContent": "flex-start",
                },
                {
                  "pointerEvents": "box-none",
                },
              ]
            }
            tabIndex={-1}
            testID="magic-modal-dialog"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#191919",
                    "flexDirection": "row",
                    "gap": 15,
                    "padding": 25,
                  },
                  {
                    "paddingTop": 25,
                  },
                  {
                    "backgroundColor": "#00af98",
                    "gap": 10,
                  },
                ]
              }
              testID="magic-toast"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {
                      "height": 25,
                      "width": 25,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "transform": [
                          {
                            "rotate": "45deg",
                          },
                        ],
                      },
                      {
                        "borderBottomWidth": 3,
                        "borderColor": "white",
                        "borderRightWidth": 3,
                        "height": 16.5,
                        "marginTop": -2.5,
                        "width": 9,
                      },
                    ]
                  }
                />
              </View>
              <Text
                style={
                  [
                    {
                      "color": "white",
                      "fontWeight": "bold",
                    },
                    undefined,
                  ]
                }
              >
                Taveira
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNSFullWindowOverlay>
`;

exports[`MagicToast renders an alert toast 1`] = `
<RNSFullWindowOverlay
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "height": 1334,
        "width": 750,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={false}
    accessibilityViewIsModal={true}
    aria-hidden={false}
    importantForAccessibility="auto"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "box-none",
        },
      ]
    }
    testID="magic-modal-portal"
  >
    <View
      accessibilityElementsHidden={false}
      aria-hidden={false}
      importantForAccessibility="auto"
      pointerEvents="box-none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "pointerEvents": "box-none",
          },
        ]
      }
      testID="magic-modal-stack-entry"
    >
      <View
        collapsable={false}
        entering={
          FadeIn {
            "build": [Function],
            "durationV": 250,
            "randomizeDelay": false,
            "reduceMotionV": "system",
          }
        }
        exiting={
          FadeOut {
            "build": [Function],
            "durationV": 250,
            "randomizeDelay": false,
            "reduceMotionV": "system",
          }
        }
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          }
        }
        pointerEvents="none"
        style={
          [
            {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
      >
        <View
          accessibilityElementsHidden={true}
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          aria-hidden={true}
          collapsable={false}
          focusable={true}
          importantForAccessibility="no-hide-descendants"
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
              },
            }
          }
          jestInlineStyle={
            [
              {
                "backgroundColor": "rgba(0, 0, 0, 0.5)",
                "flex": 1,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "backgroundColor": "rgba(0, 0, 0, 0.5)",
                "flex": 1,
              },
              {
                "opacity": 1,
              },
              {
                "backgroundColor": "transparent",
              },
            ]
          }
          testID="magic-modal-backdrop"
        />
      </View>
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
          }
        }
        jestInlineStyle={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
        pointerEvents="box-none"
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
          ]
        }
        testID="magic-modal-motion-layer"
      >
        <View
          collapsable={false}
          entering={
            FadeInUp {
              "build": [Function],
              "durationV": 250,
              "randomizeDelay": false,
              "reduceMotionV": "system",
            }
          }
          exiting={
            FadeOutUp {
              "build": [Function],
              "durationV": 250,
              "randomizeDelay": false,
              "reduceMotionV": "system",
            }
          }
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            [
              {
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "justifyContent": "flex-start",
              },
            ]
          }
          pointerEvents="box-none"
          style={
            [
              {
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "justifyContent": "flex-start",
              },
            ]
          }
          testID="magic-modal-animation-layer"
        >
          <View
            accessibilityViewIsModal={true}
            aria-modal={true}
            collapsable={false}
            importantForAccessibility="auto"
            onAccessibilityEscape={[Function]}
            role="dialog"
            style={
              [
                {
                  "flex": 1,
                  "justifyContent": "center",
                },
                {
                  "justifyContent": "flex-start",
                },
                {
                  "pointerEvents": "box-none",
                },
              ]
            }
            tabIndex={-1}
            testID="magic-modal-dialog"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#191919",
                    "flexDirection": "row",
                    "gap": 15,
                    "padding": 25,
                  },
                  {
                    "paddingTop": 25,
                  },
                  undefined,
                ]
              }
              testID="magic-toast"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "white",
                      "borderRadius": 1.6,
                      "height": 9.200000000000001,
                      "width": 3.2,
                    }
                  }
                />
                <View
                  style={
                    {
                      "backgroundColor": "white",
                      "borderRadius": 1.6,
                      "height": 3.2,
                      "marginTop": 2.4,
                      "width": 3.2,
                    }
                  }
                />
              </View>
              <Text
                style={
                  [
                    {
                      "color": "white",
                      "fontWeight": "bold",
                    },
                    undefined,
                  ]
                }
              >
                Taveira
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNSFullWindowOverlay>
`;
